welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:10: error: value % is not a member of java.awt.Color
        setBrushColor(array((offset + j)) %world_size)
                                          ^