welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  var offset:Int = 0
  val world_size:Int = getWorldHeight()
  val array:Array[Color] = initialize(world_size)

  for (i <- 1 to world_size){
    
    for (j <- 0 to world_size - 2){
     		
        setBrushColor(array((offset + j)) %world_size)
    		brushDown()
    		brushUp() 
        forward()
    }
    
    left()
    forward()
    right()
    offset = readMessage().toInt
  } 
}


def initialize(world_size:Int):Array[Color] = {
 
  var array = new Array[Color](world_size)
 
  for (i <- 0 to world_size - 2){
    array(i) = getGroundColor()
    forward()
  }
	backward(world_size - 1)
  
  return array
}


